program page modified

--- a/program.html
+++ b/program.html
@@ -97,10 +97,9 @@
               basic
               sentence formation by connecting learning to their everyday surroundings.<br><br>
 
-              Creative workshops such as pottery, lantern making, toy making, and other hands-on activities help build
+              <b>Creative workshops such as pottery, lantern making, toy making, and other hands-on activities help build
               curiosity, confidence, and fine motor skills. The Matern Roots Language Module forms the foundation for
-              all
-              further learning programs.
+              all further learning programs.</b>
             </p>
           </div>
         </div>
@@ -113,8 +112,8 @@
             <span class="age">(3 - 4 Years)</span>
             <br>
             <p>
-              Our Nursery program combines structured learning with creative play to support early literacy, numeracy,
-              communication, and growing confidence.<br><br>
+              <b>Our Nursery program combines structured learning with creative play to support early literacy, numeracy,
+              communication, science and growing confidence.</b><br><br>
 
               Children explore learning through engaging activities, with a unique Science with Fun module that
               introduces
@@ -140,8 +139,8 @@
               Our UKG or junior program supports a smooth transition into formal schooling through
               activity-based learning and structured guidance.<br><br>
 
-              The curriculum is designed around five core modules - Science, Mathematics, Language
-              Development, Environmental and Health Sciences, along with Art and Music.<br><br>
+              <b>The curriculum is designed around five core modules - Science, Mathematics, Language
+              Development, Environmental and Health Sciences, along with Art and Music.</b><br><br>
 
               Children explore math concepts like addition, subtraction, multiplication, geometry, and problem-solving
               in a
