Mattern to matern

--- a/about.html
+++ b/about.html
@@ -11,10 +11,10 @@
 
   <!-- Site Metas -->
   <meta name="description"
-    content="Learn about Mattern Roots Preschool in Kolhapur, a calm and nurturing playgroup and nursery school focused on early learning, safety, and individual child care." />
-  <meta name="author" content="Mattern Roots Preschool" />
+    content="Learn about Matern Roots Preschool in Kolhapur, a calm and nurturing playgroup and nursery school focused on early learning, safety, and individual child care." />
+  <meta name="author" content="Matern Roots Preschool" />
 
-  <title>About Mattern Roots Preschool in Kolhapur | Our Story</title>
+  <title>About Matern Roots Preschool in Kolhapur | Our Story</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -37,9 +37,9 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/mpr_.png" alt="Mattern Roots Preschool logo" />
+            <img src="images/mpr_.png" alt="Matern Roots Preschool logo" />
             <span>
-              Mattern Roots Preschool
+              Matern Roots Preschool
             </span>
           </a>
           <button class="navbar-toggler" type="button" type="button" data-toggle="collapse"
@@ -78,7 +78,7 @@
   <!-- ABOUT PAGE -->
   <section class="about-hero">
     <div class="container">
-      <h1>About Mattern Roots Preschool</h1>
+      <h1>About Matern Roots Preschool</h1>
       <p>A calm, caring space where children feel safe to grow.</p>
     </div>
   </section>
@@ -87,12 +87,12 @@
     <div class="container">
       <div class="about-story-wrap">
         <div class="about-image">
-          <img src="images/School_images/compressed_building_1.webp" alt="Mattern Roots Preschool building in Kolhapur">
+          <img src="images/School_images/compressed_building_1.webp" alt="Matern Roots Preschool building in Kolhapur">
         </div>
 
         <div class="about-text">
           <p>
-            <span class="about-head-text">Mattern Roots Preschool</span> was founded with a clear purpose -
+            <span class="about-head-text">Matern Roots Preschool</span> was founded with a clear purpose -
             to create a nurturing learning environment where young children feel emotionally secure,
             respected, and encouraged to grow at their own pace.
           </p>
@@ -117,7 +117,7 @@
       <h2>Matern Roots Experimental Lab Based Teaching Programme (ELTEP)</h2>
 
       <p>
-        At Mattern Roots Preschool, learning is guided by our Experimental Lab Based Teaching Programme
+        At Matern Roots Preschool, learning is guided by our Experimental Lab Based Teaching Programme
         (ELTEP). This approach introduces children to hands-on learning experiences that encourage
         observation, exploration, and logical thinking in an age-appropriate manner.
       </p>
@@ -175,12 +175,12 @@
           <div class="info_logo">
             <div>
               <a href="">
-                <img src="images/mpr_.png" alt="Mattern Roots Preschool logo" class="footer-logo" />
+                <img src="images/mpr_.png" alt="Matern Roots Preschool logo" class="footer-logo" />
 
               </a>
             </div>
             <p>
-              Mattern Roots Preschool is a nurturing space where young minds grow through
+              Matern Roots Preschool is a nurturing space where young minds grow through
               play, care, and curiosity. We focus on early learning that builds confidence,
               creativity, and strong values.
             </p>
@@ -220,10 +220,10 @@
           <div class="pl-0 pl-lg-5 pl-md-4 inf0_links">
             <h5>Contact Us</h5>
             <p>
-              Mattern Roots Preschool<br /><br />
+              Matern Roots Preschool<br /><br />
               Kadamwadi, Kolhapur,<br />
               +91 93094 59772<br />
-              matternroots@gmail.com
+              Maternroots@gmail.com
             </p>
           </div>
         </div>
@@ -235,7 +235,7 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p class="text-center mb-1">
-      © <span id="year"></span> Mattern Roots Preschool. All Rights Reserved.
+      © <span id="year"></span> Matern Roots Preschool. All Rights Reserved.
     </p>
     <p class="text-center text-sm">
       Managed by
