--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,10 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="description" content="Contact and address details of Mattern Roots Preschool in Kolhapur." />
-  <meta name="author" content="Mattern Roots Preschool" />
+  <meta name="description" content="Contact and address details of Matern Roots Preschool in Kolhapur." />
+  <meta name="author" content="Matern Roots Preschool" />
 
-  <title>Mattern Roots Preschool</title>
+  <title>Matern Roots Preschool</title>
 
 
 
@@ -46,10 +46,10 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/mpr_.png" alt="Mattern Roots Preschool logo" width="72" height="72" loading="eager">
+            <img src="images/mpr_.png" alt="Matern Roots Preschool logo" width="72" height="72" loading="eager">
 
             <span>
-              Mattern Roots Preschool
+              Matern Roots Preschool
             </span>
           </a>
           <button class="navbar-toggler" type="button" type="button" data-toggle="collapse"
@@ -91,7 +91,7 @@
     <div class="container">
       <h1>Get in Touch</h1>
       <p>
-        We would love to welcome you to Mattern Roots Preschool.
+        We would love to welcome you to Matern Roots Preschool.
         Feel free to call, visit, or leave us a message.
       </p>
     </div>
@@ -119,7 +119,7 @@
 
           <p>
             <strong>Email</strong><br>
-            matternrootspreschool@gmail.com
+            maternrootspreschool@gmail.com
           </p>
 
           <div class="contact-actions">
@@ -161,12 +161,12 @@
           <div class="info_logo">
             <div>
               <a href="">
-                <img src="images/mpr_.png" alt="Mattern Roots Preschool Logo" class="footer-logo" />
+                <img src="images/mpr_.png" alt="Matern Roots Preschool Logo" class="footer-logo" />
 
               </a>
             </div>
             <p>
-              Mattern Roots Preschool is a nurturing space where young minds grow through
+              Matern Roots Preschool is a nurturing space where young minds grow through
               play, care, and curiosity. We focus on early learning that builds confidence,
               creativity, and strong values.
             </p>
@@ -206,10 +206,10 @@
           <div class="pl-0 pl-lg-5 pl-md-4 inf0_links">
             <h5>Contact Us</h5>
             <p>
-              Mattern Roots Preschool<br /><br />
+              Matern Roots Preschool<br /><br />
               Kadamwadi, Kolhapur,<br />
               +91 93094 59772<br />
-              matternroots@gmail.com
+              maternrootspreschool@gmail.com
             </p>
           </div>
         </div>
@@ -221,7 +221,7 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p class="text-center mb-1">
-      © <span id="year"></span> Mattern Roots Preschool. All Rights Reserved.
+      © <span id="year"></span> Matern Roots Preschool. All Rights Reserved.
     </p>
     <p class="text-center text-sm">
       Managed by
