--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
   <!-- Site Metas -->
   <meta name="description"
-    content="Mattern Roots Preschool in Kolhapur offers a safe, caring, and joyful learning environment for playgroup and nursery children with experienced teachers and child-friendly facilities." />
-  <meta name="author" content="Mattern Roots Preschool" />
+    content="Matern Roots Preschool in Kolhapur offers a safe, caring, and joyful learning environment for playgroup and nursery children with experienced teachers and child-friendly facilities." />
+  <meta name="author" content="Matern Roots Preschool" />
 
-  <title>Mattern Roots Preschool</title>
+  <title>Matern Roots Preschool</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -38,9 +38,9 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/mpr_.png" alt="Mattern Roots Preschool logo" />
+            <img src="images/mpr_.png" alt="Matern Roots Preschool logo" />
             <span>
-              Mattern Roots Preschool
+              Matern Roots Preschool
             </span>
           </a>
 
@@ -101,7 +101,7 @@
                     </h1>
 
                     <p>
-                      Mattern Roots Preschool provides a caring, joyful, and secure environment
+                      Matern Roots Preschool provides a caring, joyful, and secure environment
                       where young children feel comfortable, confident, and eager to learn
                       each day.
                     </p>
@@ -200,7 +200,7 @@
                       </span>
                     </h1>
                     <p>
-                      Located in Kolhapur, Mattern Roots Preschool offers a child-friendly
+                      Located in Kolhapur, Matern Roots Preschool offers a child-friendly
                       space designed to support early development and joyful learning
                       in a caring atmosphere.
                     </p>
@@ -598,15 +598,15 @@
       <div class="about-wrapper">
         <div class="about-image">
           <img src="images/School_images/compressed_building_1.webp"
-            alt="Classroom at Mattern Roots Preschool in Kolhapur">
+            alt="Classroom at Matern Roots Preschool in Kolhapur">
 
         </div>
 
         <div class="about-content">
-          <h2>About Mattern Roots Preschool</h2>
+          <h2>About Matern Roots Preschool</h2>
 
           <p>
-            Mattern Roots Preschool is a warm and nurturing learning space designed
+            Matern Roots Preschool is a warm and nurturing learning space designed
             especially for young children. We focus on creating a safe, caring, and
             joyful environment where every child feels valued and confident.
           </p>
@@ -639,7 +639,7 @@
         <div class="testimonial-card">
           <p class="quote">
             We are very happy with the care and attention our child receives at
-            Mattern Roots Preschool. The teachers are warm, patient, and truly caring.
+            Matern Roots Preschool. The teachers are warm, patient, and truly caring.
           </p>
           <span class="author">Parent of Nursery Student</span>
         </div>
@@ -684,12 +684,12 @@
           <div class="info_logo">
             <div>
               <a href="">
-                <img src="images/mpr_.png" alt="Mattern Roots Preschool" class="footer-logo" />
+                <img src="images/mpr_.png" alt="Matern Roots Preschool" class="footer-logo" />
 
               </a>
             </div>
             <p>
-              Mattern Roots Preschool is a nurturing space where young minds grow through
+              Matern Roots Preschool is a nurturing space where young minds grow through
               play, care, and curiosity. We focus on early learning that builds confidence,
               creativity, and strong values.
             </p>
@@ -729,10 +729,10 @@
           <div class="pl-0 pl-lg-5 pl-md-4 inf0_links">
             <h5>Contact Us</h5>
             <p>
-              Mattern Roots Preschool<br /><br />
+              Matern Roots Preschool<br /><br />
               Kadamwadi, Kolhapur,<br />
               +91 93094 59772<br />
-              matternroots@gmail.com
+              maternroots@gmail.com
             </p>
           </div>
         </div>
@@ -744,7 +744,7 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p class="text-center mb-1">
-      © <span id="year"></span> Mattern Roots Preschool. All Rights Reserved.
+      © <span id="year"></span> Matern Roots Preschool. All Rights Reserved.
     </p>
     <p class="text-center text-sm">
       Managed by
