--- a/program.html
+++ b/program.html
@@ -9,10 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
   <meta name="description"
-    content="Explore playgroup, nursery, and kindergarten preparation programs at Mattern Roots Preschool in Kolhapur. Age-appropriate learning focused on care, creativity, and early development." />
-  <meta name="author" content="Mattern Roots Preschool" />
+    content="Explore playgroup, nursery, and kindergarten preparation programs at Matern Roots Preschool in Kolhapur. Age-appropriate learning focused on care, creativity, and early development." />
+  <meta name="author" content="Matern Roots Preschool" />
 
-  <title>Preschool Programs in Kolhapur | Playgroup & Nursery | Mattern Roots</title>
+  <title>Preschool Programs in Kolhapur | Playgroup & Nursery | Matern Roots</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -34,9 +34,9 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/mpr_.png" alt="Mattern Roots Preschool logo" />
+            <img src="images/mpr_.png" alt="Matern Roots Preschool logo" />
             <span>
-              Mattern Roots Preschool
+              Matern Roots Preschool
             </span>
           </a>
           <button class="navbar-toggler" type="button" type="button" data-toggle="collapse"
@@ -84,7 +84,7 @@
       <div class="programs-grid">
         <!-- Playgroup -->
         <div class="program-card">
-          <img src="images/MR_Playgroup.png" alt="Playgroup program at Mattern Roots Preschool in Kolhapur">
+          <img src="images/MR_Playgroup.png" alt="Playgroup program at Matern Roots Preschool in Kolhapur">
           <div class="program-content">
             <h3>Playgroup</h3>
             <span class="age">(2 - 3 Years)</span>
@@ -132,7 +132,7 @@
 
         <!-- UKG or Junior Kg programme    -->
         <div class="program-card">
-          <img src="images/ukg.png" alt="UKG or Junior Kg programme at Mattern Roots Preschool">
+          <img src="images/ukg.png" alt="UKG or Junior Kg programme at Matern Roots Preschool">
           <div class="program-content">
             <h3>UKG or Junior Kg Programme</h3>
             <span class="age">(4 - 5 Years)</span>
@@ -181,12 +181,12 @@
           <div class="info_logo">
             <div>
               <a href="">
-                <img src="images/mpr_.png" alt="Mattern Roots Preschool logo" class="footer-logo" />
+                <img src="images/mpr_.png" alt="Matern Roots Preschool logo" class="footer-logo" />
 
               </a>
             </div>
             <p>
-              Mattern Roots Preschool is a nurturing space where young minds grow through
+              Matern Roots Preschool is a nurturing space where young minds grow through
               play, care, and curiosity. We focus on early learning that builds confidence,
               creativity, and strong values.
             </p>
@@ -225,10 +225,10 @@
           <div class="pl-0 pl-lg-5 pl-md-4 inf0_links">
             <h5>Contact Us</h5>
             <p>
-              Mattern Roots Preschool<br /><br />
+              Matern Roots Preschool<br /><br />
               Kadamwadi, Kolhapur,<br />
               +91 93094 59772<br />
-              matternroots@gmail.com
+              maternroots@gmail.com
             </p>
           </div>
         </div>
@@ -240,7 +240,7 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p class="text-center mb-1">
-      © <span id="year"></span> Mattern Roots Preschool. All Rights Reserved.
+      © <span id="year"></span> Matern Roots Preschool. All Rights Reserved.
     </p>
     <p class="text-center text-sm">
       Managed by
