--- a/gallery.html
+++ b/gallery.html
@@ -9,10 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
   <meta name="description"
-    content="Explore pictures of classroom environment, learning through play, and care at Mattern Roots Preschool in Kolhapur." />
-  <meta name="author" content="Mattern Roots Preschool" />
+    content="Explore pictures of classroom environment, learning through play, and care at Matern Roots Preschool in Kolhapur." />
+  <meta name="author" content="Matern Roots Preschool" />
 
-  <title>Preschool Gallery in Kolhapur | Mattern Roots Preschool</title>
+  <title>Preschool Gallery in Kolhapur | Matern Roots Preschool</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -31,9 +31,9 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/mpr_.png" alt="Mattern Roots Preschool logo" />
+            <img src="images/mpr_.png" alt="Matern Roots Preschool logo" />
             <span>
-              Mattern Roots Preschool
+              Matern Roots Preschool
             </span>
           </a>
           <button class="navbar-toggler" type="button" type="button" data-toggle="collapse"
@@ -73,7 +73,7 @@
   <!-- ABOUT PAGE -->
   <section class="about-hero">
     <div class="container">
-      <h1>Life at Mattern Roots</h1>
+      <h1>Life at Matern Roots</h1>
       <p>Moments of learning, play, and joy from our preschool.</p>
     </div>
   </section>
@@ -85,10 +85,10 @@
       <div class="gallery-scroll">
         <div class="gallery-row">
           <img src="images/School_images/compressed_classroom_2.webp" alt="Preschool classroom setup in Kolhapur">
-          <img src="images/School_images/compressed_classroom_3.webp" alt="Learning space at Mattern Roots Preschool">
+          <img src="images/School_images/compressed_classroom_3.webp" alt="Learning space at Matern Roots Preschool">
           <img src="images/School_images/compressed_classroom_1.webp"
-            alt="Classroom environment at Mattern Roots Preschool in Kolhapur">
-          <img src="images/School_images/compressed_classroom_4.webp" alt="Learning space at Mattern Roots Preschool">
+            alt="Classroom environment at Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_classroom_4.webp" alt="Learning space at Matern Roots Preschool">
         </div>
       </div>
 
@@ -100,13 +100,13 @@
       <div class="gallery-scroll">
         <div class="gallery-row">
           <img src="images/School_images/compressed_activity.webp"
-            alt="Children learning through play at Mattern Roots Preschool in Kolhapur">
-          <img src="images/School_images/compressed_activity_1.webp" alt="Children playing at Mattern Roots Preschool">
-          <img src="images/School_images/compressed_activity_2.webp" alt="Children playing at Mattern Roots Preschool">
-          <img src="images/School_images/compressed_activity_3.webp" alt="Children playing at Mattern Roots Preschool">
-          <img src="images/School_images/compressed_activity_4.webp" alt="Children playing at Mattern Roots Preschool">
-          <img src="images/School_images/compressed_activity_5.webp" alt="Children playing at Mattern Roots Preschool">
-          <img src="images/School_images/compressed_activity_6.webp" alt="Children playing at Mattern Roots Preschool">
+            alt="Children learning through play at Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_activity_1.webp" alt="Children playing at Matern Roots Preschool">
+          <img src="images/School_images/compressed_activity_2.webp" alt="Children playing at Matern Roots Preschool">
+          <img src="images/School_images/compressed_activity_3.webp" alt="Children playing at Matern Roots Preschool">
+          <img src="images/School_images/compressed_activity_4.webp" alt="Children playing at Matern Roots Preschool">
+          <img src="images/School_images/compressed_activity_5.webp" alt="Children playing at Matern Roots Preschool">
+          <img src="images/School_images/compressed_activity_6.webp" alt="Children playing at Matern Roots Preschool">
         </div>
       </div>
     </div>
@@ -116,10 +116,10 @@
 
       <div class="gallery-scroll">
         <div class="gallery-row">
-          <img src="images/School_images/compressed_space_1.webp" alt="Caring environment at Mattern Roots Preschool in Kolhapur">
-          <img src="images/School_images/compressed_space_2.webp" alt="Caring environment at Mattern Roots Preschool in Kolhapur">
-          <img src="images/School_images/compressed_space_5.webp" alt="Caring environment at Mattern Roots Preschool in Kolhapur">
-          <img src="images/School_images/compressed_space_4.webp" alt="Caring environment at Mattern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_space_1.webp" alt="Caring environment at Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_space_2.webp" alt="Caring environment at Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_space_5.webp" alt="Caring environment at Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_space_4.webp" alt="Caring environment at Matern Roots Preschool in Kolhapur">
         </div>
       </div>
     </div>
@@ -129,12 +129,12 @@
 
       <div class="gallery-scroll">
         <div class="gallery-row">
-          <img src="images/School_images/compressed_Building.webp" alt="Outside view of Mattern Roots Preschool in Kolhapur">
-          <img src="images/School_images/compressed_building_1.webp" alt="Outside view of Mattern Roots Preschool in Kolhapur">
-          <img src="images/School_images/compressed_building_2.webp" alt="Outside view of Mattern Roots Preschool in Kolhapur">
-          <img src="images/School_images/compressed_building_3.webp" alt="Outside view of Mattern Roots Preschool in Kolhapur">
-          <img src="images/School_images/compressed_building_4.webp" alt="Outside view of Mattern Roots Preschool in Kolhapur">
-          <img src="images/School_images/compressed_building_5.webp" alt="Outside view of Mattern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_Building.webp" alt="Outside view of Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_building_1.webp" alt="Outside view of Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_building_2.webp" alt="Outside view of Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_building_3.webp" alt="Outside view of Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_building_4.webp" alt="Outside view of Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_building_5.webp" alt="Outside view of Matern Roots Preschool in Kolhapur">
         </div>
       </div>
     </div>
@@ -149,11 +149,11 @@
           <div class="info_logo">
             <div>
               <a href="">
-                <img src="images/mpr_.png" alt="Mattern Roots Preschool logo" class="footer-logo" />
+                <img src="images/mpr_.png" alt="Matern Roots Preschool logo" class="footer-logo" />
               </a>
             </div>
             <p>
-              Mattern Roots Preschool is a nurturing space where young minds grow through
+              Matern Roots Preschool is a nurturing space where young minds grow through
               play, care, and curiosity. We focus on early learning that builds confidence,
               creativity, and strong values.
             </p>
@@ -193,10 +193,10 @@
           <div class="pl-0 pl-lg-5 pl-md-4 inf0_links">
             <h5>Contact Us</h5>
             <p>
-              Mattern Roots Preschool<br /><br />
+              Matern Roots Preschool<br /><br />
               Kadamwadi, Kolhapur,<br />
               +91 93094 59772<br />
-              matternroots@gmail.com
+              maternroots@gmail.com
             </p>
           </div>
         </div>
@@ -208,7 +208,7 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p class="text-center mb-1">
-      © <span id="year"></span> Mattern Roots Preschool. All Rights Reserved.
+      © <span id="year"></span> Matern Roots Preschool. All Rights Reserved.
     </p>
     <p class="text-center text-sm">
       Managed by
