logo spell correction

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/mpr_.png" alt="Matern Roots Preschool logo" />
+            <img src="images/matern_roots_logo.png" alt="Matern Roots Preschool logo" />
             <span>
               Matern Roots Preschool
             </span>
@@ -175,7 +175,7 @@
           <div class="info_logo">
             <div>
               <a href="">
-                <img src="images/mpr_.png" alt="Matern Roots Preschool logo" class="footer-logo" />
+                <img src="images/matern_roots_logo.png" alt="Matern Roots Preschool logo" class="footer-logo" />
 
               </a>
             </div>
