--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/mpr_.png" alt="Matern Roots Preschool logo" width="72" height="72" loading="eager">
+            <img src="images/matern_roots_logo.png" alt="Matern Roots Preschool logo" width="72" height="72" loading="eager">
 
             <span>
               Matern Roots Preschool
@@ -161,7 +161,7 @@
           <div class="info_logo">
             <div>
               <a href="">
-                <img src="images/mpr_.png" alt="Matern Roots Preschool Logo" class="footer-logo" />
+                <img src="images/matern_roots_logo.png" alt="Matern Roots Preschool Logo" class="footer-logo" />
 
               </a>
             </div>
