--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/matern_roots_logo.png" alt="Matern Roots Preschool logo" width="72" height="72" loading="eager">
+            <img src="images/MRPS_.png" alt="Matern Roots Preschool logo" width="72" height="72" loading="eager">
 
             <span>
               Matern Roots Preschool
@@ -158,12 +158,13 @@
       <div class="row">
         <!-- About us -->
         <div class="col-md-3">
-          <div class="info_logo">
+         <div class="info_logo">
             <div>
-              <a href="">
-                <img src="images/matern_roots_logo.png" alt="Matern Roots Preschool Logo" class="footer-logo" />
+              <!-- <a href="">
+                <img src="images/MRPS_.png" alt="Matern Roots Preschool" class="footer-logo" />
 
-              </a>
+              </a> -->
+              <h5>MATERN ROOTS<br> PRE-SCHOOL</h5>
             </div>
             <p>
               Matern Roots Preschool is a nurturing space where young minds grow through
