--- a/program.html
+++ b/program.html
@@ -34,7 +34,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img src="images/matern_roots_logo.png" alt="Matern Roots Preschool logo" />
+            <img src="images/MRPS_.png" alt="Matern Roots Preschool logo" />
             <span>
               Matern Roots Preschool
             </span>
@@ -180,10 +180,11 @@
         <div class="col-md-3">
           <div class="info_logo">
             <div>
-              <a href="">
-                <img src="images/matern_roots_logo.png" alt="Matern Roots Preschool logo" class="footer-logo" />
+              <!-- <a href="">
+                <img src="images/MRPS_.png" alt="Matern Roots Preschool" class="footer-logo" />
 
-              </a>
+              </a> -->
+              <h5>MATERN ROOTS<br> PRE-SCHOOL</h5>
             </div>
             <p>
               Matern Roots Preschool is a nurturing space where young minds grow through
