--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
     <div class="container">
       <div class="about-story-wrap">
         <div class="about-image">
-          <img src="images/School_images/compressed_building_1.webp" alt="Matern Roots Preschool building in Kolhapur">
+          <img src="images/School_images/compressed_Building.webp" alt="Matern Roots Preschool building in Kolhapur">
         </div>
 
         <div class="about-text">
@@ -155,7 +155,7 @@
 
   <section class="program-cta">
     <div class="container">
-      <h3>Admissions Are Open Now</h3>
+      <h3>Helping preschools run smarter, every day</h3>
       <p></p>
       <p></p>
       <p></p>
