--- a/index.html
+++ b/index.html
@@ -225,10 +225,12 @@
     <div class="container">
       <div class="heading_container">
         <h2>What We Offer</h2>
-        <p>
-          Thoughtfully designed programs and facilities to support your childs
-          early growth, safety, and happiness.
-        </p>
+        <div class="section-brand">
+          <p>Thoughtfully designed programs and facilities for early growth, safety, and happiness.</p>
+          <img src="images/MRPS_.png" alt="Mattern Roots Preschool Logo">
+
+        </div>
+
       </div>
 
       <div class="row">
@@ -597,7 +599,7 @@
     <div class="container-fluid">
       <div class="about-wrapper">
         <div class="about-image">
-          <img src="images/School_images/compressed_building_1.webp"
+          <img src="images/School_images/compressed_Building.webp"
             alt="Classroom at Matern Roots Preschool in Kolhapur">
 
         </div>
@@ -666,9 +668,9 @@
   <!-- contact section -->
   <section class="cta_strip">
     <div class="container">
-      <h3>Admissions Open for Playgroup & Nursery</h3>
+      <h3>Call us or visit preschool to get more details.</h3>
       <p>
-        Call us to know more or visit the preschool for a personal tour.
+
       </p>
       <a href="tel:+919309459772" class="cta-btn">Call Now</a>
       <a href="contact.html" class="cta-btn-outline">Email Us</a>
