--- a/program.html
+++ b/program.html
@@ -120,10 +120,10 @@
               introduces
               basic concepts through simple stories and hands-on experiments.<br><br>
 
-              The Nursery Math module gently introduces addition, subtraction, and multiplication in a playful and
+              <b>The Nursery Math module gently introduces addition, subtraction, and multiplication in a playful and
               effortless
               way, while continued focus on language, creativity, and social interaction builds curiosity and
-              independence.
+              independence.</b>
             </p>
           </div>
 
@@ -149,9 +149,9 @@
               technology
               concepts.<br><br>
 
-              Language development focuses on reading, writing, phonics, grammar, storytelling, public speaking, and
+              <b>Language development focuses on reading, writing, phonics, grammar, storytelling, public speaking, and
               introduction to a second language. Environmental learning builds awareness of nature, health, hygiene, and
-              responsible living, while art and music nurture creativity, expression, and cultural appreciation.<br><br>
+              responsible living, while art and music nurture creativity, expression, and cultural appreciation.</b><br><br>
 
               The program encourages independent thinking, emotional readiness, teamwork, and confidence for primary
               school.
@@ -166,7 +166,7 @@
   <!-- Admission open section -->
   <section class="program-cta">
     <div class="container">
-      <h3>Admissions Open</h3>
+      <h3>Talk to us for full program details</h3>
       <p>We welcome you to visit our preschool and experience our learning environment.</p>
       <a href="contact.html" class="cta-btn">Enquire Now</a>
     </div>
