logo added in what we offer section

--- a/index.html
+++ b/index.html
@@ -226,8 +226,9 @@
       <div class="heading_container">
         <h2>What We Offer</h2>
         <div class="section-brand">
-          <p>Thoughtfully designed programs and facilities for early growth, safety, and happiness.</p>
           <img src="images/MRPS_.png" alt="Mattern Roots Preschool Logo">
+
+          <p>Thoughtfully designed programs and facilities for early growth, safety, and happiness.</p>
 
         </div>
 
@@ -236,6 +237,9 @@
       <div class="row">
         <div class="col-md-6">
           <div class="content-box">
+            <span class="card-logo">
+              <img src="images/MRPS_.png" alt="Mattern Roots Preschool">
+            </span>
             <div class="img-box">
               <svg xmlns="http://www.w3.org/2000/svg" height="512pt" version="1.1" viewBox="-38 0 512 512.00142"
                 width="512pt">
@@ -268,6 +272,9 @@
 
         <div class="col-md-6">
           <div class="content-box">
+            <span class="card-logo">
+              <img src="images/MRPS_.png" alt="Mattern Roots Preschool">
+            </span>
             <div class="img-box">
               <svg version="1.1" id="Capa_5" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 469.333 469.333"
@@ -340,6 +347,9 @@
 
         <div class="col-md-6">
           <div class="content-box">
+            <span class="card-logo">
+              <img src="images/MRPS_.png" alt="Mattern Roots Preschool">
+            </span>
             <div class="img-box">
               <svg version="1.1" id="Capa_3" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
@@ -437,6 +447,9 @@
 
         <div class="col-md-6">
           <div class="content-box">
+            <span class="card-logo">
+              <img src="images/MRPS_.png" alt="Mattern Roots Preschool">
+            </span>
             <div class="img-box">
               <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 480 480"
@@ -542,6 +555,9 @@
 
         <div class="col-md-6">
           <div class="content-box">
+            <span class="card-logo">
+              <img src="images/MRPS_.png" alt="Mattern Roots Preschool">
+            </span>
             <div class="img-box">
               <svg height="512" viewBox="0 0 44 60" width="512" xmlns="http://www.w3.org/2000/svg">
                 <g id="007---Vegan-Certified">
@@ -569,6 +585,9 @@
 
         <div class="col-md-6">
           <div class="content-box">
+            <span class="card-logo">
+              <img src="images/MRPS_.png" alt="Mattern Roots Preschool">
+            </span>
             <div class="img-box">
               <svg height="496pt" viewBox="-24 0 496 496" width="496pt" xmlns="http://www.w3.org/2000/svg">
                 <path
