address updated at footer

--- a/contact.html
+++ b/contact.html
@@ -208,9 +208,11 @@
             <h5>Contact Us</h5>
             <p>
               Matern Roots Preschool<br /><br />
-              Kadamwadi, Kolhapur,<br />
+              10, Lambore Housing Society,
+              Laxminarayan Nagar, Kadamwadi,
+              Kolhapur, ,<br /><br/>
               +91 93094 59772<br />
-              maternrootspreschool@gmail.com
+              maternroots@gmail.com
             </p>
           </div>
         </div>
