--- a/gallery.html
+++ b/gallery.html
@@ -196,7 +196,9 @@
             <h5>Contact Us</h5>
             <p>
               Matern Roots Preschool<br /><br />
-              Kadamwadi, Kolhapur,<br />
+              10, Lambore Housing Society,
+              Laxminarayan Nagar, Kadamwadi,
+              Kolhapur, ,<br /><br/>
               +91 93094 59772<br />
               maternroots@gmail.com
             </p>
