--- a/program.html
+++ b/program.html
@@ -98,9 +98,10 @@
               basic
               sentence formation by connecting learning to their everyday surroundings.<br><br>
 
-              <b>Creative workshops such as pottery, lantern making, toy making, and other hands-on activities help build
-              curiosity, confidence, and fine motor skills. The Matern Roots Language Module forms the foundation for
-              all further learning programs.</b>
+              <b>Creative workshops such as pottery, lantern making, toy making, and other hands-on activities help
+                build
+                curiosity, confidence, and fine motor skills. The Matern Roots Language Module forms the foundation for
+                all further learning programs.</b>
             </p>
           </div>
         </div>
@@ -113,17 +114,18 @@
             <span class="age">(3 - 4 Years)</span>
             <br>
             <p>
-              <b>Our Nursery program combines structured learning with creative play to support early literacy, numeracy,
-              communication, science and growing confidence.</b><br><br>
+              <b>Our Nursery program combines structured learning with creative play to support early literacy,
+                numeracy,
+                communication, science and growing confidence.</b><br><br>
 
               Children explore learning through engaging activities, with a unique Science with Fun module that
               introduces
               basic concepts through simple stories and hands-on experiments.<br><br>
 
               <b>The Nursery Math module gently introduces addition, subtraction, and multiplication in a playful and
-              effortless
-              way, while continued focus on language, creativity, and social interaction builds curiosity and
-              independence.</b>
+                effortless
+                way, while continued focus on language, creativity, and social interaction builds curiosity and
+                independence.</b>
             </p>
           </div>
 
@@ -141,7 +143,7 @@
               activity-based learning and structured guidance.<br><br>
 
               <b>The curriculum is designed around five core modules - Science, Mathematics, Language
-              Development, Environmental and Health Sciences, along with Art and Music.</b><br><br>
+                Development, Environmental and Health Sciences, along with Art and Music.</b><br><br>
 
               Children explore math concepts like addition, subtraction, multiplication, geometry, and problem-solving
               in a
@@ -150,8 +152,10 @@
               concepts.<br><br>
 
               <b>Language development focuses on reading, writing, phonics, grammar, storytelling, public speaking, and
-              introduction to a second language. Environmental learning builds awareness of nature, health, hygiene, and
-              responsible living, while art and music nurture creativity, expression, and cultural appreciation.</b><br><br>
+                introduction to a second language. Environmental learning builds awareness of nature, health, hygiene,
+                and
+                responsible living, while art and music nurture creativity, expression, and cultural
+                appreciation.</b><br><br>
 
               The program encourages independent thinking, emotional readiness, teamwork, and confidence for primary
               school.
@@ -227,7 +231,9 @@
             <h5>Contact Us</h5>
             <p>
               Matern Roots Preschool<br /><br />
-              Kadamwadi, Kolhapur,<br />
+              10, Lambore Housing Society,
+              Laxminarayan Nagar, Kadamwadi,
+              Kolhapur, ,<br /><br />
               +91 93094 59772<br />
               maternroots@gmail.com
             </p>
