program page changes

--- a/program.html
+++ b/program.html
@@ -84,7 +84,7 @@
       <div class="programs-grid">
         <!-- Playgroup -->
         <div class="program-card">
-          <img src="images/MR_Playgroup.png" alt="Playgroup program at Matern Roots Preschool in Kolhapur">
+          <img src="images/MRPS_.png" alt="Playgroup program at Matern Roots Preschool in Kolhapur">
           <div class="program-content">
             <h3>Playgroup</h3>
             <span class="age">(2 - 3 Years)</span>
@@ -108,7 +108,7 @@
 
         <!-- Nursery -->
         <div class="program-card">
-          <img src="images/nursery_logo.png" alt="Nursery Program">
+          <img src="images/MRPS_.png" alt="Nursery Program">
           <div class="program-content">
             <h3>Nursery</h3>
             <span class="age">(3 - 4 Years)</span>
@@ -134,10 +134,11 @@
 
         <!-- UKG or Junior Kg programme    -->
         <div class="program-card">
-          <img src="images/ukg.png" alt="UKG or Junior Kg programme at Matern Roots Preschool">
+          <img src="images/MRPS_.png" alt="UKG or Junior Kg programme at Matern Roots Preschool">
           <div class="program-content">
             <h3>UKG or Junior Kg Programme</h3>
             <span class="age">(4 - 5 Years)</span>
+            <br>
             <p>
               Our UKG or junior program supports a smooth transition into formal schooling through
               activity-based learning and structured guidance.<br><br>
