Overall theme changed to purple

--- a/gallery.html
+++ b/gallery.html
@@ -32,9 +32,9 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <img src="images/MRPS_.png" alt="Matern Roots Preschool logo" />
-            <span>
+            <!-- <span>
               Matern Roots Preschool
-            </span>
+            </span> -->
           </a>
           <button class="navbar-toggler" type="button" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -71,7 +71,7 @@
   </div>
 
   <!-- ABOUT PAGE -->
-  <section class="about-hero">
+  <section class="top-main-part">
     <div class="container">
       <h1>Life at Matern Roots</h1>
       <p>Moments of learning, play, and joy from our preschool.</p>
@@ -116,10 +116,14 @@
 
       <div class="gallery-scroll">
         <div class="gallery-row">
-          <img src="images/School_images/compressed_space_1.webp" alt="Caring environment at Matern Roots Preschool in Kolhapur">
-          <img src="images/School_images/compressed_space_2.webp" alt="Caring environment at Matern Roots Preschool in Kolhapur">
-          <img src="images/School_images/compressed_space_5.webp" alt="Caring environment at Matern Roots Preschool in Kolhapur">
-          <img src="images/School_images/compressed_space_4.webp" alt="Caring environment at Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_space_1.webp"
+            alt="Caring environment at Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_space_2.webp"
+            alt="Caring environment at Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_space_5.webp"
+            alt="Caring environment at Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_space_4.webp"
+            alt="Caring environment at Matern Roots Preschool in Kolhapur">
         </div>
       </div>
     </div>
@@ -129,12 +133,18 @@
 
       <div class="gallery-scroll">
         <div class="gallery-row">
-          <img src="images/School_images/compressed_Building.webp" alt="Outside view of Matern Roots Preschool in Kolhapur">
-          <img src="images/School_images/compressed_building_1.webp" alt="Outside view of Matern Roots Preschool in Kolhapur">
-          <img src="images/School_images/compressed_building_2.webp" alt="Outside view of Matern Roots Preschool in Kolhapur">
-          <img src="images/School_images/compressed_building_3.webp" alt="Outside view of Matern Roots Preschool in Kolhapur">
-          <img src="images/School_images/compressed_building_4.webp" alt="Outside view of Matern Roots Preschool in Kolhapur">
-          <img src="images/School_images/compressed_building_5.webp" alt="Outside view of Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_Building.webp"
+            alt="Outside view of Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_building_1.webp"
+            alt="Outside view of Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_building_2.webp"
+            alt="Outside view of Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_building_3.webp"
+            alt="Outside view of Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_building_4.webp"
+            alt="Outside view of Matern Roots Preschool in Kolhapur">
+          <img src="images/School_images/compressed_building_5.webp"
+            alt="Outside view of Matern Roots Preschool in Kolhapur">
         </div>
       </div>
     </div>
@@ -156,7 +166,10 @@
             </div>
             <p>
               Matern Roots Preschool is a nurturing space where young minds grow through
-              play, care, and curiosity. We focus on early learning that builds confidence,
+              play, care, and curiosity.
+            </p>
+            <p>
+              We focus on early learning that builds confidence,
               creativity, and strong values.
             </p>
           </div>
@@ -198,7 +211,7 @@
               Matern Roots Preschool<br /><br />
               10, Lambore Housing Society,
               Laxminarayan Nagar, Kadamwadi,
-              Kolhapur, ,<br /><br/>
+              Kolhapur, ,<br /><br />
               +91 93094 59772<br />
               maternroots@gmail.com
             </p>
