--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <img src="images/MRPS_.png" alt="Matern Roots Preschool logo" />
-            <span>
+            <!-- <span>
               Matern Roots Preschool
-            </span>
+            </span> -->
           </a>
 
           <button class="navbar-toggler" type="button" type="button" data-toggle="collapse"
@@ -93,6 +93,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="detail-box">
+                    <div class="hero-kicker">Matern Roots Preschool</div>
                     <h1>
                       A Safe & Loving Place <br />
                       <span>
@@ -119,6 +120,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="detail-box">
+                    <div class="hero-kicker">Matern Roots Preschool</div>
                     <h1>
                       Learning Through Play <br />
                       <span>
@@ -144,6 +146,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="detail-box">
+                    <div class="hero-kicker">Matern Roots Preschool</div>
                     <h1>
                       Gentle Guidance <br />
                       <span>
@@ -169,6 +172,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="detail-box">
+                    <div class="hero-kicker">Matern Roots Preschool</div>
                     <h1>
                       A Preschool Parents Trust <br />
                       <span>
@@ -193,6 +197,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="detail-box">
+                    <div class="hero-kicker">Matern Roots Preschool</div>
                     <h1>
                       Nurturing Young Minds <br />
                       <span>
@@ -628,7 +633,7 @@
 
           <p>
             Matern Roots Preschool is a warm and nurturing learning space designed
-            especially for young children. We focus on creating a safe, caring, and
+            especially for young children.<br /> We focus on creating a safe, caring, and
             joyful environment where every child feels valued and confident.
           </p>
 
@@ -685,12 +690,9 @@
   </section>
 
   <!-- contact section -->
-  <section class="cta_strip">
+  <section class="cta_strip_bottom">
     <div class="container">
       <h3>Call us or visit preschool to get more details.</h3>
-      <p>
-
-      </p>
       <a href="tel:+919309459772" class="cta-btn">Call Now</a>
       <a href="contact.html" class="cta-btn-outline">Email Us</a>
     </div>
@@ -712,7 +714,10 @@
             </div>
             <p>
               Matern Roots Preschool is a nurturing space where young minds grow through
-              play, care, and curiosity. We focus on early learning that builds confidence,
+              play, care, and curiosity.
+            </p>
+            <p>
+              We focus on early learning that builds confidence,
               creativity, and strong values.
             </p>
           </div>
@@ -754,7 +759,7 @@
               Matern Roots Preschool<br /><br />
               10, Lambore Housing Society,
               Laxminarayan Nagar, Kadamwadi,
-              Kolhapur, ,<br /><br/>
+              Kolhapur<br /><br />
               +91 93094 59772<br />
               maternroots@gmail.com
             </p>
