--- a/about.html
+++ b/about.html
@@ -38,9 +38,9 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <img src="images/MRPS_.png" alt="Matern Roots Preschool logo" />
-            <span>
+            <!-- <span>
               Matern Roots Preschool
-            </span>
+            </span> -->
           </a>
           <button class="navbar-toggler" type="button" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -76,7 +76,7 @@
     <!-- end header section -->
   </div>
   <!-- ABOUT PAGE -->
-  <section class="about-hero">
+  <section class="top-main-part">
     <div class="container">
       <h1>About Matern Roots Preschool</h1>
       <p>A calm, caring space where children feel safe to grow.</p>
@@ -153,7 +153,7 @@
     </div>
   </section>
 
-  <section class="program-cta">
+  <section class="cta_strip_bottom">
     <div class="container">
       <h3>Helping preschools run smarter, every day</h3>
       <p></p>
@@ -182,7 +182,10 @@
             </div>
             <p>
               Matern Roots Preschool is a nurturing space where young minds grow through
-              play, care, and curiosity. We focus on early learning that builds confidence,
+              play, care, and curiosity.
+            </p>
+            <p>
+              We focus on early learning that builds confidence,
               creativity, and strong values.
             </p>
           </div>
