--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,6 @@
 
   <title>Matern Roots Preschool</title>
 
-
-
   <!-- fonts style -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,9 +46,9 @@
           <a class="navbar-brand" href="index.html">
             <img src="images/MRPS_.png" alt="Matern Roots Preschool logo" width="72" height="72" loading="eager">
 
-            <span>
+            <!-- <span>
               Matern Roots Preschool
-            </span>
+            </span> -->
           </a>
           <button class="navbar-toggler" type="button" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -87,7 +85,7 @@
   </div>
 
   <!-- CONTACT PAGE -->
-  <section class="about-hero">
+  <section class="top-main-part">
     <div class="container">
       <h1>Get in Touch</h1>
       <p>
@@ -158,7 +156,7 @@
       <div class="row">
         <!-- About us -->
         <div class="col-md-3">
-         <div class="info_logo">
+          <div class="info_logo">
             <div>
               <!-- <a href="">
                 <img src="images/MRPS_.png" alt="Matern Roots Preschool" class="footer-logo" />
@@ -168,7 +166,10 @@
             </div>
             <p>
               Matern Roots Preschool is a nurturing space where young minds grow through
-              play, care, and curiosity. We focus on early learning that builds confidence,
+              play, care, and curiosity.
+            </p>
+            <p>
+              We focus on early learning that builds confidence,
               creativity, and strong values.
             </p>
           </div>
@@ -210,7 +211,7 @@
               Matern Roots Preschool<br /><br />
               10, Lambore Housing Society,
               Laxminarayan Nagar, Kadamwadi,
-              Kolhapur, ,<br /><br/>
+              Kolhapur, ,<br /><br />
               +91 93094 59772<br />
               maternroots@gmail.com
             </p>
