--- a/program.html
+++ b/program.html
@@ -35,9 +35,9 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <img src="images/MRPS_.png" alt="Matern Roots Preschool logo" />
-            <span>
+            <!-- <span>
               Matern Roots Preschool
-            </span>
+            </span> -->
           </a>
           <button class="navbar-toggler" type="button" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -72,7 +72,7 @@
     </header>
   </div>
 
-  <section class="about-hero">
+  <section class="top-main-part">
     <div class="container">
       <h1>Our Programs</h1>
       <p>Age-appropriate learning programs designed to nurture every childs growth.</p>
@@ -169,7 +169,7 @@
 
 
   <!-- Admission open section -->
-  <section class="program-cta">
+  <section class="cta_strip_bottom">
     <div class="container">
       <h3>Talk to us for full program details</h3>
       <p>We welcome you to visit our preschool and experience our learning environment.</p>
@@ -193,7 +193,10 @@
             </div>
             <p>
               Matern Roots Preschool is a nurturing space where young minds grow through
-              play, care, and curiosity. We focus on early learning that builds confidence,
+              play, care, and curiosity.
+            </p>
+            <p>
+              We focus on early learning that builds confidence,
               creativity, and strong values.
             </p>
           </div>
