css changed for mobile screen

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <!-- end header section -->
 
     <!-- slider section -->
-    <section class=" slider_section position-relative">
+    <section class=" slider_section position-relative no-overlay">
       <div class="container">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
