--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
   <section class="testimonial_section">
     <div class="container">
       <div class="heading_container text-center">
-        <h2>What Parents Say</h2>
+        <h2>Parents Testimonials</h2>
         <p>
           Hear from parents who trust us with their childs early learning journey.
         </p>
