css changes - overall top section

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 
 </head>
 
-<body class="sub_page">
+<body class="sub_page contact_page">
   <div class="hero_area">
     <!-- header section strats -->
     <header class="header_section">
@@ -85,8 +85,9 @@
   </div>
 
   <!-- CONTACT PAGE -->
-  <section class="top-main-part">
+  <section class="top-main-part contact-top-main">
     <div class="container">
+      <span class="page-kicker">Let's Connect</span>
       <h1>Get in Touch</h1>
       <p>
         We would love to welcome you to Matern Roots Preschool.
