--- a/program.html
+++ b/program.html
@@ -27,7 +27,7 @@
   <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
-<body class="sub_page">
+<body class="sub_page program_page">
   <div class="hero_area">
     <!-- header section strats -->
     <header class="header_section">
@@ -72,8 +72,9 @@
     </header>
   </div>
 
-  <section class="top-main-part">
+  <section class="top-main-part program-top-main">
     <div class="container">
+      <span class="page-kicker">Designed for Every Age</span>
       <h1>Our Programs</h1>
       <p>Age-appropriate learning programs designed to nurture every childs growth.</p>
     </div>
