--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
   <link rel="canonical" href="https://mattern-roots-preschool.vercel.app//about.html">
 </head>
 
-<body class="sub_page">
+<body class="sub_page about_page">
   <div class="hero_area">
     <!-- header section strats -->
     <header class="header_section">
@@ -76,8 +76,9 @@
     <!-- end header section -->
   </div>
   <!-- ABOUT PAGE -->
-  <section class="top-main-part">
+  <section class="top-main-part about-top-main">
     <div class="container">
+      <span class="page-kicker">Our Story</span>
       <h1>About Matern Roots Preschool</h1>
       <p>A calm, caring space where children feel safe to grow.</p>
     </div>
