--- a/gallery.html
+++ b/gallery.html
@@ -73,6 +73,7 @@
   <!-- ABOUT PAGE -->
   <section class="top-main-part">
     <div class="container">
+      <span class="gallery-kicker">Campus Moments</span>
       <h1>Life at Matern Roots</h1>
       <p>Moments of learning, play, and joy from our preschool.</p>
     </div>
@@ -81,6 +82,7 @@
   <section class="gallery-page">
     <div class="gallery-section">
       <h2>Classroom Environment</h2>
+      <p class="gallery-section-lead">Bright and welcoming classrooms designed for focus, comfort, and confidence.</p>
 
       <div class="gallery-scroll">
         <div class="gallery-row">
@@ -96,6 +98,7 @@
 
     <div class="gallery-section">
       <h2>Learning Through Play</h2>
+      <p class="gallery-section-lead">Hands-on activities that build curiosity, social skills, and joyful early learning.</p>
 
       <div class="gallery-scroll">
         <div class="gallery-row">
@@ -113,6 +116,7 @@
 
     <div class="gallery-section">
       <h2>Our Preschool Space</h2>
+      <p class="gallery-section-lead">A safe and child-friendly environment that supports everyday discovery.</p>
 
       <div class="gallery-scroll">
         <div class="gallery-row">
@@ -130,6 +134,7 @@
 
     <div class="gallery-section">
       <h2>Preschool Outside View</h2>
+      <p class="gallery-section-lead">A peaceful campus setting where children feel secure and happy to begin each day.</p>
 
       <div class="gallery-scroll">
         <div class="gallery-row">
